Preparation step 1 - cleaning code

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "would-you-rather-project",
+  "name": "would-you-rather",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
